Fix text overflow

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -29,13 +29,20 @@
 .card__description {
   display: flex;
   color: black;
-  font-family: Inter;
-  font-weight: 900;
-  font-size: 24px;
-  line-height: 1.2;
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
+}
+
+.card__title {
+  font-family: "Inter", Arial, sans-serif;
+  max-width: 220px;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 1.2;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .card__like-button {
