--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,6 @@
 .footer {
   color: #545454;
-  font-family: Inter;
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 400;
   line-height: 1.2;
   font-size: 18px;
