--- a/pages/index.css
+++ b/pages/index.css
@@ -5,57 +5,4 @@
 @import url("../blocks/profile.css");
 @import url("../blocks/cards.css");
 @import url("../blocks/footer.css");
-
-@media screen and (max-width: 480px) {
-  .header__logo {
-    width: 126px;
-    height: 24px;
-  }
-}
-
-@media screen and (max-width: 580px) {
-  .profile {
-    flex-direction: column;
-  }
-  .profile__info {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 282px;
-    width: 100%;
-    margin: 30px 0 36px;
-    justify-content: center;
-  }
-  .profile__title {
-    font-size: 22px;
-    text-align: center;
-  }
-  .profile__add-button {
-    margin: 0;
-    width: 282px;
-  }
-  .profile__description {
-    text-align: center;
-    font-size: 14px;
-    margin: auto;
-  }
-  .profile__edit-button {
-    margin: 0;
-    width: 18px;
-    height: 18px;
-  }
-  .profile__image {
-    margin: 0;
-  }
-}
-
-@media screen and (max-width: 770px) and (min-width: 579px) {
-  .profile__add-button {
-    width: 50px;
-  }
-  .profile__info {
-    grid-template-columns: minmax(auto, 335px) auto;
-  }
-  .profile__title {
-    font-size: 35px;
-  }
-}
+@import url("../blocks/media.css");
